add dynamic length feature

--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -7,7 +7,7 @@
     </mat-toolbar-row>
 </mat-toolbar>
 
-<app-search (broadcaseSearchResult)='onResult($event)'></app-search>
+<app-search (broadcastSearchResult)='onResult($event)'></app-search>
 
 <div class="container">
 
