--- a/client/client/src/app/pages/checkout/checkout.component.html
+++ b/client/client/src/app/pages/checkout/checkout.component.html
@@ -65,6 +65,7 @@
   <br>
   <div class="buttons">
     <button mat-stroked-button color="primary">Jetzt Bezahlen</button>
+    <button (click)="onOrderClicked()" mat-stroked-button color="primary">New Order</button>
   </div>
   <br>
 </div>
