--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -36,7 +36,7 @@
   <div class="rightCon">
     <p>Summe: {{sum/100 | currency:'EUR':'symbol'}}</p>
     <div class="buttons">
-      <button mat-stroked-button color="primary">Zur Kasse gehen</button>
+      <button routerLink="/checkout" mat-stroked-button color="primary">Zur Kasse gehen</button>
     </div>
 
   </div>
