--- a/client/client/src/app/pages/checkout/checkout.component.html
+++ b/client/client/src/app/pages/checkout/checkout.component.html
@@ -1,3 +1,72 @@
-<p>
-  checkout works!
-</p>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Webshop 1:1000000</span>
+    <span class="spacer"></span>
+    <mat-icon (click)="onShoppingCartClicked()" class="shopping-icon">shopping_cart</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
+<h1>Ihre Bestellung</h1>
+<div class="container">
+  <div class="leftCon">
+    <div *ngFor="let product of cart">
+      <mat-card class="product-card">
+        <mat-card-header>
+          <mat-card-title>{{product?.name}}</mat-card-title>
+        </mat-card-header>
+        <img matCardImage src="{{product?.image}}" alt="Produkt Bild">
+        <mat-card-content>
+          {{product?.description}}<br>
+
+        </mat-card-content>
+        <mat-card-actions align="start">
+          <button (click)="removeProduct(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
+
+        </mat-card-actions>
+        <mat-card-footer class="product-card-footer">
+          Preis: {{product?.unitPrice/100 | currency:'EUR':'symbol'}}
+        </mat-card-footer>
+      </mat-card>
+    </div>
+  </div>
+</div>
+
+
+<div class="example-container">
+  <h4>Persönliche Angaben: </h4>
+  <mat-form-field>
+    <input matInput required name="firstname" placeholder="Vorname:" [(ngModel)]="order?.orderer.firstname">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput required name="lastname" placeholder="Nachname:" [(ngModel)]="order?.orderer.lastname">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput required name="email" placeholder="E-Mail:" [(ngModel)]="order.email">
+  </mat-form-field>
+
+  <br>
+  <h4>Adressangaben: </h4>
+  <mat-form-field>
+    <input matInput required name="street" placeholder="Straße: " [(ngModel)]="order?.address.street">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput required name="houseNr" type="number" placeholder="HausNr: " [(ngModel)]="order?.address.houseNr"> 
+  </mat-form-field>
+  
+  <mat-form-field>
+    <input matInput required name="city" placeholder="Stadt: " [(ngModel)]="order?.address.city">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput required name="zip" placeholder="Postleitzahl: " [(ngModel)]="order?.address.zip">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput required name="country" placeholder="Land/Region: " [(ngModel)]="order?.address.country">
+  </mat-form-field>
+  <br>
+  <br>
+  <div class="buttons">
+    <button mat-stroked-button (click)="onPayClicked()" color="primary">Jetzt Bezahlen</button>
+  </div>
+  <br>
+</div>
