small enhancements (payment-css)

--- a/client/client/src/app/pages/checkout/checkout.component.css
+++ b/client/client/src/app/pages/checkout/checkout.component.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   float: right;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .product-card {
