Delete Button (Aus Warenkorb entfernen) in Checkout

--- a/client/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/client/src/app/pages/dashboard/dashboard.component.html
@@ -60,7 +60,7 @@
             <h3>Adresse</h3> 
             {{order?.address.street}} {{order?.address.houseNr}}<br>
             {{order?.address.zip}} {{order?.address.city}}<br>
-            {{order?.country}}<br>
+            {{order?.address.country}}<br>
             <h3>Orderer</h3>
             {{order?.orderer.firstname}} {{order?.orderer.lastname}}<br>
             {{order?.email}}<br>
