added alerts for user input and add to cart function

--- a/client/client/src/app/app.component.html
+++ b/client/client/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="content">
+  <app-alert [ngClass]="{'success': success, 'error': error}"></app-alert>
   <router-outlet></router-outlet>
 </div>
