--- a/client/client/src/styles.css
+++ b/client/client/src/styles.css
@@ -5,3 +5,36 @@
 mat-icon{
     cursor: pointer;
 }
+
+app-alert{
+    width: 40%;
+    height: 3%;  
+    position: fixed;
+    z-index: 3;
+    top: 90%;
+    left: 30%;
+    color: white;
+}
+
+.alert-success{
+    background-color:rgba(14, 167, 14);
+}
+
+.alert-danger{
+    background-color:rgb(250, 70, 15);
+}
+
+.close{
+    margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.close:hover {
+    color: black;
+}
