--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -1,45 +1,45 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Webshop 1:1000000</span>
-    <span class="spacer"></span>
-    <mat-icon matBadge="{{cartCount}}" matBadgePosition="before" matBadgeColor="accent"  class="shopping-icon">shopping_cart</mat-icon>
-  </mat-toolbar-row>
+	<mat-toolbar-row>
+		<span>Webshop 1:1000000</span>
+		<span class="spacer"></span>
+		<mat-icon matBadge="{{cartCount}}" matBadgePosition="before" matBadgeColor="accent" class="shopping-icon">shopping_cart</mat-icon>
+	</mat-toolbar-row>
 </mat-toolbar>
 <br>
 <br>
 <div class="buttons">
-  <button routerLink="/products" mat-stroked-button color="primary">Weiter Shoppen</button>
+	<button routerLink="/products" mat-stroked-button color="primary">Weiter Shoppen</button>
 </div>
 <div class="container">
-  <div class="leftCon">
-  <div *ngFor="let product of cart">
-    <mat-card class="product-card">
-      <mat-card-header>
-        <mat-card-title>{{product?.name}}</mat-card-title>
-      </mat-card-header>
-      <img matCardImage src="{{product?.image}}" alt="Produkt Bild">
-      <mat-card-content>
-        {{product?.description}}<br>
+	<div class="leftCon">
+		<div *ngFor="let product of cart">
+			<mat-card class="product-card">
+				<mat-card-header>
+					<mat-card-title>{{product?.name}}</mat-card-title>
+				</mat-card-header>
+				<img matCardImage src="{{product?.image}}" alt="Produkt Bild">
+				<mat-card-content>
+					{{product?.description}}<br>
 
-      </mat-card-content>
-      <mat-card-actions align="start">
-        <button (click)="removeProduct(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
+				</mat-card-content>
+				<mat-card-actions align="start">
+					<button (click)="removeProduct(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
 
-      </mat-card-actions>
-      <mat-card-footer class="product-card-footer">
-        Preis: {{product?.unitPrice/100 | currency:'EUR':'symbol'}}
-      </mat-card-footer>
-    </mat-card>
-  </div>
-</div>
-  <div class="rightCon">
-    <p>Summe: {{sum/100 | currency:'EUR':'symbol'}}</p>
-    <div class="buttons">
+				</mat-card-actions>
+				<mat-card-footer class="product-card-footer">
+					Preis: {{product?.unitPrice/100 | currency:'EUR':'symbol'}}
+				</mat-card-footer>
+			</mat-card>
+		</div>
+	</div>
+	<div class="rightCon">
+		<p>Summe: {{sum/100 | currency:'EUR':'symbol'}}</p>
+		<div class="buttons">
+			
+			<button *ngIf="cartCount!==0" routerLink="/checkout" mat-stroked-button color="primary">Zur Kasse gehen</button>
 
-      <button routerLink="/checkout" mat-stroked-button color="primary">Zur Kasse gehen</button>
-      
-    </div>
+		</div>
 
-  </div>
+	</div>
 </div>
