--- a/client/client/src/app/pages/checkout/checkout.component.html
+++ b/client/client/src/app/pages/checkout/checkout.component.html
@@ -12,7 +12,7 @@
       <mat-card class="product-card">
         <mat-card-header>
 		  <mat-card-title>{{product?.name}}</mat-card-title>
-		  <mat-card-subtitle>Die gekaufte Menge: {{product?.boughtQuantity}}</mat-card-subtitle>
+		  <mat-card-subtitle>Anzahl: {{product?.boughtQuantity}}</mat-card-subtitle>
         </mat-card-header>
         <img matCardImage src="{{product?.image}}" alt="Produkt Bild">
         <mat-card-content>
