--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
@@ -12,7 +12,7 @@
     <mat-card class="product-card">
       <mat-card-header>
         <mat-card-title>{{product?.name}}</mat-card-title>
-        <mat-card-subtitle>Verfügbar: {{product?.quantity}}</mat-card-subtitle>
+        <mat-card-subtitle>Verfügbar: {{product?.quantity - (product?.boughtQuantity||0)}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         <img matCardImage src="{{product?.image}}">
